--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^15.0.0",
     "next-auth": "^4.24.11",
     "nextjs-toploader": "^3.8.16",
+    "prisma": "^6.9.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
