--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-insta-stories": "^2.8.0",
     "react-use": "^17.6.0",
     "resend": "^4.5.1",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
